<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.OnBoardLanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_language_headline" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/onboard_language_caption" />

        <com.google.android.material.chip.ChipGroup
            android:layout_marginTop="32dp"
            android:id="@+id/chipGroupLanguage"
            app:chipSpacingHorizontal="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboard_language_secondary_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/permission" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboard_language_primary_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/continue_btn"
        app:cornerRadius="24dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>