<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/markApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/app_name"
                android:textColor="@color/black" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/openChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            tools:ignore="RelativeOverlap">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/subscription_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_support_agent_24"
                    app:tint="#2e2e2e"
                    tools:ignore="ContentDescription,UseAppTint" />

                <TextView
                    android:id="@+id/subscription_text"
                    style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/expert"
                    android:textColor="@color/black" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/markApp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fefefe"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                android:id="@+id/mainCustomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <in.hexcommand.asktoagri.ui.view.QueryCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:caption="Common"
                app:file_url="https://sklktecdnems02.cdnsrv.jio.com/jiosaavn.cdn.jio.com/799/c7fcdb5d33731d6d044462b7e29970c9_96.mp4"
                app:query_id="0"
                app:title="@string/caption"
                app:type="audio" />

            <in.hexcommand.asktoagri.ui.view.QueryCardView
                android:id="@+id/custom_query_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:caption="Common"
                app:file_url="https://"
                app:query_id="0"
                app:title="@string/caption"
                app:type="image" />

            <in.hexcommand.asktoagri.ui.view.QueryCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:caption="Common"
                app:file_url="https://"
                app:query_id="0"
                app:title="@string/caption"
                app:type="video" />

            <in.hexcommand.asktoagri.ui.view.QueryCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:caption="Common"
                app:file_url="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-17.mp3"
                app:query_id="0"
                app:title="@string/caption"
                app:type="audio" />

            <in.hexcommand.asktoagri.ui.view.QueryCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:caption="Common"
                app:file_url="https://"
                app:query_id="0"
                app:title="@string/caption"
                app:type="text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_article_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_query_card"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:clipToPadding="false"
                tools:targetApi="m" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>